# schema-miner

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  MAINTENANCE.md  README.md  README_PYPI.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/gettingstarted/: installation.rst  quickstart.rst
docs/source/packagereference/: ontology_grounding.rst  pdf_extractor.rst  schema-extractor.rst
experiments/evaluate_results/: evaluate_schema.py
experiments/ontology_grounding/: agentic_qudt_grounding.py  ontology_grounding_with_prompting.py
experiments/schema_extraction/: schema_extraction.py
notebooks/: schema_mining_ontology_grounding_example.ipynb  schema_mining_with_LLMs_and_expert_example.ipynb
results/Ideal Schema/Atomic-Layer-Deposition/: experimental-ideal-schema-with-qudt.json  experimental-ideal-schema.json  simulation-ideal-schema-with-qudt.json  simulation-ideal-schema.json
results/Ideal Schema/Atomic-Layer-Etching/: Ideal-ALE-Experimental-Schema-with-qudt.json  Ideal-ALE-Experimental-Schema.json  Ideal-ALE-Simulation-Schema-with-qudt.json  Ideal-ALE-Simulation-Schema.json
results/stage-1/experimental-schema/: gpt-4-turbo.json  gpt-4o.json  meta-llama-3.1-8b-instruct.json  mistral-large-instruct.json
results/stage-1/simulation-schema/: gpt-4-turbo.json  mistral-large-instruct.json
schema_miner/: __init__.py  cli.py
schema_miner/config/: cliConfig.py  envConfig.py  llmRegistry.py  processConfig.py
schema_miner/ontology_grounding/: __init__.py  agentic_qudt_grounding.py  prompt_qudt_grounding.py
schema_miner/pdf_text_extractor/: __init__.py  extract_text.py
schema_miner/prompts/ontology_grounding/: agent_qudt_prompt1.py  agent_qudt_prompt2.py  prompt_template.py
schema_miner/prompts/schema_extraction/: prompt_template1.py  prompt_template2.py  prompt_template3.py
schema_miner/schema_extractor/: __init__.py  extract_schema.py
schema_miner/schemas/: QUDT_quantity_schema.json  QUDT_quantity_schema_example.json
schema_miner/services/LLM_Inference/: LLM_inference.py  huggingface_llm_inference.py  inference_runner.py  ollama_llm_inference.py  openai_llm_inference.py  saia_llm_inference.py
schema_miner/services/PDF_Parsers/: PyPDF_pdf_parser.py  docling_pdf_parser.py  minerU_parser.py  pdf_parser.py
schema_miner/services/ontology/: ontology_manager.py  ontology_parser.py
schema_miner/services/schema_manager/: schema_manager.py
schema_miner/utils/: dictionary_utils.py  evaluation_utils.py  file_utils.py  json_utils.py
src/config/: config.py  process_config.yml
src/experiments/: file_text_extractor.py
src/experiments/evaluate_results/: evaluate_schema.py
src/experiments/ontology_grounding/: agentic_qudt_grounding.py  ontology_grounding_with_prompting.py
src/experiments/schema_extraction/: schema_extraction_stage1.py  schema_extraction_stage2.py  schema_extraction_stage3.py
src/prompts/: prompt_template1.py  prompt_template2.py  prompt_template3.py
src/prompts/ontology_grounding/: agent_qudt_prompt1.py  agent_qudt_prompt2.py  prompt_template.py
src/prompts/schema_extraction/: prompt_template1.py  prompt_template2.py  prompt_template3.py
src/schemas/: QUDT_quantity_schema.json
src/services/: LLM_inference.py  ollama_llm_inference.py  openai_llm_inference.py  saia_llm_inference.py
src/services/LLM_Inference/: huggingface_llm_inference.py  ollama_llm_inference.py  openai_llm_inference.py  saia_llm_inference.py
src/services/PDF_Parsers/: PyPDF_pdf_parser.py  docling_pdf_parser.py  pdf_parser.py
src/services/ontology_parsers/: ontology_parser.py
src/utils/: evaluation.py  utils.py
tutorials/notebooks/: schema_mining_ontology_grounding_example.ipynb  schema_mining_with_LLMs_and_expert_example.ipynb
tutorials/scripts/evaluate_results/: evaluate_schema.py
(+4408 files in other folders)
