[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-miner"
version = "1.0.0"
description = "A Human-in-the-Loop Workflow for Scientific Schema Mining with Large Language Models"
authors = [{name = "Sameer Sadruddin", email = "sameer.sadruddin@tib.eu"}]
license = {text = "MIT"} 
dependencies = [
    "evaluate>=0.4.3",
    "langchain_community>=0.3.14",
    "langchain_core>=0.3.29",
    "langchain_ollama>=0.2.2",
    "langchain_openai>=0.3.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "transformers>=4.48.0"
]

[project.urls]
homepage = "https://github.com/sciknoworg/schema-miner"
repository = "https://github.com/sciknoworg/schema-miner"