[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema_miner"
version = "3.2.0"
description = "A Human-in-the-Loop Workflow for Scientific Schema Mining with Large Language Models"
authors = [
    {name = "Sameer Sadruddin", email = "sameer.sadruddin@tib.eu"},
    {name = "Jennifer D'Souza", email = "jennifer.dsouza@tib.eu"}
]
maintainers = [
    {name = "Sameer Sadruddin", email = "sameer.sadruddin@tib.eu"}
]
dependencies = [
    "evaluate>=0.4.6",
    "langchain>=1.2.12",
    "langchain_community>=0.4.1",
    "langchain_core>=1.2.20",
    "langchain_ollama>=1.0.1",
    "langchain_openai>=1.1.11",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "langchain_classic>=1.0.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.3",
    "transformers>=5.3.0",
    "rdflib>=7.6.0",
    "faiss-cpu>=1.13.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "typer>=0.24.1",
    "mistral-common>=1.10.0",
    "pypdf>=6.9.1",
    "torch>=2.10.0",
    "accelerate>=1.13.0"
]
requires-python = ">=3.12"
readme = "README_PYPI.md"
license = "MIT"
keywords = ["Schema Discovery", "Schema Mining", "Scientific Schemas", "Large Language Models", "Human-in-the-loop Workflow"]

[project.urls]
homepage = "https://github.com/sciknoworg/schema-miner"
repository = "https://github.com/sciknoworg/schema-miner"
Documentation = "https://schema-miner.readthedocs.io"

[tool.setuptools.packages.find]
include = ["schema_miner*"]

[tool.setuptools.package-data]
schema_miner = ["schemas/*.json"]

[project.scripts]
schema-miner = "schema_miner.cli:app"
